changed check successful list of allocated seats to parameterized test