@@ -5,9 +5,10 @@ package com.techreturners;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.ValueSource;
 
-
+import java.util.Arrays;
 import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -36,14 +37,18 @@ public class CinnamonCinemasTest {
         assertFalse(cinema.allocateSeats(seatRequested));
 
     }
-
-    @Test
-    public void checkSuccessfulListOfAllocatedSeats(){
+    @ParameterizedTest
+    @CsvSource(textBlock = """
+            2,  A1 A2,
+            4,  A1 A2 A3 A4,
+            7,  A1 A2 A3 A4 A5 B1 B2,
+            15, A1 A2 A3 A4 A5 B1 B2 B3 B4 B5 C1 C2 C3 C4 C5
+            """)
+    public void checkSuccessfulListOfAllocatedSeats(int seatsRequested, String expectedResult) {
         cinema = new CinnamonCinemas(15);
-        int seatsRequested = 5;
-        List<String> expectedAllocatedSeatsList = List.of("A1","A2","A3","A4","A5");
+        List<String> expectedResultList = Arrays.asList(expectedResult.split(" "));
         cinema.allocateSeats(seatsRequested);
-        assertEquals(expectedAllocatedSeatsList,cinema.getListOfSeatsAllocated());
+        assertEquals(expectedResultList,cinema.getListOfSeatsAllocated());
     }
 
 
